chore: Update configuration files and improve documentation
- Added XML and Dockerfile settings to .editorconfig for consistent formatting.
- Removed unnecessary trailing whitespace in .markdownlint.json.
- Expanded .prettierrc to include JSON and CSS/HTML file formatting options.
- Introduced new .shfmt.toml and .sqlfluff files for shell and SQL linting configurations.
- Enhanced various documentation files for clarity and consistency, including README, setup, and troubleshooting guides.
- Updated multiple markdown files to improve readability by adjusting line breaks and formatting.

--- a/.editorconfig
+++ b/.editorconfig
@@ -35,3 +35,13 @@ indent_size = 2
 indent_style = space
 indent_size = 2
 
+# XML files
+[*.xml]
+indent_style = space
+indent_size = 2
+
+# Dockerfile
+[Dockerfile*]
+indent_style = space
+indent_size = 2
+
